@@ -388,23 +388,23 @@ namespace Taskmaster.Audio
 
 						if (volAdjusted)
 						{
-							Log.Information($"<Audio> {info} volume changed from {oldvolume * 100f:N1} % to {prc.Volume * 100f:N1} %");
+							Log.Information($"{info.ToFullString()} Volume changed from {oldvolume * 100f:N1} % to {prc.Volume * 100f:N1} %");
 						}
 						else
 						{
 							if (ShowInaction && DebugAudio)
-								Log.Debug($"<Audio> {info}; Volume: {volume * 100f:N1} % – Already correct (Plan: {prc.VolumeStrategy.ToString()})");
+								Log.Debug($"{info.ToFullString()} Volume at {volume * 100f:N1} % – Already correct (Plan: {prc.VolumeStrategy.ToString()})");
 						}
 					}
 					else
 					{
 						if (ShowInaction && DebugAudio)
-							Log.Debug($"<Audio> {info}; Volume: {(volume * 100f):N1} % – not watched: {info.Path}");
+							Log.Debug($"{info.ToFullString()}; Volume at {(volume * 100f):N1} % – not watched: {info.Path}");
 					}
 				}
 				else
 				{
-					Log.Debug($"<Audio> Failed to get info for session #{pid}");
+					Log.Debug($"<Audio> Failed to get info for process #{pid}");
 				}
 			}
 			catch (OutOfMemoryException) { throw; }
